[gd_scene load_steps=5 format=2]

[ext_resource path="res://PianoKeyWhite.gd" type="Script" id=1]
[ext_resource path="res://assets/piano_white_key_normal.png" type="Texture" id=2]
[ext_resource path="res://assets/piano_white_key_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/piano_white_key_leftmost_pressed.png" type="Texture" id=4]

[node name="PianoKeyWhite" type="Node2D"]
script = ExtResource( 1 )

[node name="piano_white_key_normal" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="piano_white_key_pressed" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="piano_white_key_leftmost_pressed" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
